--- a/Client/SCSS/Pages/_Location.scss
+++ b/Client/SCSS/Pages/_Location.scss
@@ -1,19 +1,16 @@
 .location-footer {
-  position: sticky;
+  position: fixed;
   bottom: 0;
   width: 100%;
   background-color: rgb(245, 235, 220);
   z-index: 1000; // Set a higher z-index to ensure it stays on top of other elements
   transition: bottom 0.3s ease-in-out; // Smooth transition effect
-  
- 
 }
 
 .location-footer {
   box-shadow: rgba(0, 0, 0, 0.1) 0px -1px 1px;
 
   .footer {
-    
     @include container();
     display: flex;
     padding: 20px;
@@ -30,52 +27,50 @@
           display: flex;
         }
       }
-      a{
+      a {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         text-decoration: none;
         color: black;
-        &:hover{
-            opacity: 50%;
-            transition: 0.3s;
+        &:hover {
+          opacity: 50%;
+          transition: 0.3s;
         }
 
-        @include for-size(tablet){
-          &:hover{
+        @include for-size(tablet) {
+          &:hover {
             opacity: 50%;
             transition: 0.3s;
-        }
-        }
-
-        @include for-size(mobile){
-          &:hover{
-            opacity: 50%;
-            transition: 0.3s;
-        }
-        }
-
-          img {
-            width: 20px;
-            height: 20px;
-            &:hover{
-                opacity: 50%;
-                transition: 0.3s;
-            }
           }
-    
-          span {
-            line-height: 20px;
-            font-size: 12px;
-            font-family: "Flame Sans";
+        }
+
+        @include for-size(mobile) {
+          &:hover {
+            opacity: 50%;
+            transition: 0.3s;
           }
+        }
+
+        img {
+          width: 20px;
+          height: 20px;
+          &:hover {
+            opacity: 50%;
+            transition: 0.3s;
+          }
+        }
+
+        span {
+          line-height: 20px;
+          font-size: 12px;
+          font-family: "Flame Sans";
+        }
       }
     }
   }
 }
-
-
 
 .location-navbar {
   background-color: rgb(214, 35, 0);
@@ -186,84 +181,206 @@
   }
 }
 
-.location-locations {
+// .location-locations {
+//   @include container();
+
+//   .top {
+//     margin-top: 5px;
+//     display: flex;
+//     a {
+//       width: 100%;
+
+//       button {
+//         cursor: pointer;
+//         font-size: 16px;
+//         line-height: 24px;
+//         color: rgb(80, 35, 20);
+//         width: 100%;
+//         height: 48px;
+//         background-color: transparent;
+//         border: none;
+//         font-family: "Flame Sans";
+//       }
+//       .nearby {
+//         color: red;
+//         border-bottom: 3px solid red;
+//         font-weight: bold;
+//       }
+//     }
+//   }
+
+//   .bottom {
+//     .location.active {
+//       // for js
+
+//       .location-bottom {
+//         display: initial;
+//       }
+//     }
+//     .location {
+//       height: 100%;
+//       border: 2px solid rgb(198, 198, 145);
+//       padding-right: 12px;
+//       padding-left: 12px;
+//       padding-top: 8px;
+//       padding-bottom: 8px;
+//       background-color: rgb(255, 255, 255);
+//       display: flex;
+//       flex-direction: column;
+//       gap: 10px;
+//       .location-top {
+//         padding-right: 12px;
+//         padding-left: 12px;
+//         padding-top: 8px;
+//         padding-bottom: 8px;
+//         height: 100%;
+//         display: flex;
+//         justify-content: space-between;
+
+//         .left {
+//           display: flex;
+//           flex-direction: column;
+//           justify-content: center;
+
+//           h1 {
+//             margin-bottom: 4px;
+//             font-size: 18px;
+//             line-height: 20px;
+//             font-family: "Flame Bold";
+//             color: rgb(80, 35, 20);
+//           }
+
+//           .mid {
+//             span {
+//               font-size: 13px;
+//               font-family: "Flame Sans";
+//               line-height: 20px;
+//               color: rgb(80, 35, 20);
+//             }
+//           }
+
+//           .functionality {
+//             font-size: 13px;
+//             font-family: "Flame Sans";
+//             line-height: 20px;
+//             color: rgb(80, 35, 20);
+//           }
+//         }
+
+//         .right {
+//           display: flex;
+//           justify-content: center;
+//           align-items: center;
+//           height: 100px;
+//           button {
+//             height: 24px;
+//             background-color: transparent;
+//             border: none;
+//             img {
+//               width: 24px;
+//               height: 24px;
+//               display: none;
+//             }
+
+//             img.active {
+//               transition: 1s;
+//               display: initial;
+//             }
+//           }
+//         }
+//       }
+
+//       .location-bottom {
+//         display: none;
+//         .order-menu {
+//           display: flex;
+//           justify-content: center;
+//           align-items: center;
+//           width: 100%;
+//           gap: 50px;
+
+//           a {
+//             display: flex;
+//             flex-direction: column;
+//             align-items: center;
+//             justify-content: center;
+//             gap: 10px;
+//             width: 60px;
+//             font-family: "Flame Sans";
+//             line-height: 20px;
+//             color: rgb(80, 35, 20);
+//             text-decoration: none;
+//             font-weight: bold;
+
+//             button {
+//               border: none;
+//               height: 50px;
+//               width: 50px;
+//               background-color: red;
+//               border-radius: 9999px;
+//               display: flex;
+//               align-items: center;
+//               justify-content: center;
+
+//               img {
+//                 width: 24px;
+//               }
+//             }
+//             span {
+//               font-family: "Flame Sans";
+//               line-height: 20px;
+//               color: rgb(80, 35, 20);
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
+
+.favorites-content,
+.recents-content {
+  display: none;
+}
+
+.nearby-content {
   @include container();
-  .top {
-    margin-top: 5px;
+  .location {
+    height: 100%;
+    border: 2px solid rgb(198, 198, 145);
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: rgb(255, 255, 255);
     display: flex;
-    a {
-      width: 100%;
-
-      button {
-        cursor: pointer;
-        font-size: 16px;
-        line-height: 24px;
-        color: rgb(80, 35, 20);
-        width: 100%;
-        height: 48px;
-        background-color: transparent;
-        border: none;
-        font-family: "Flame Sans";
-      }
-      .nearby {
-        color: red;
-        border-bottom: 3px solid red;
-        font-weight: bold;
-      }
-    }
-  }
-
-  .bottom {
-    .location.active {
-      // for js
-
-      .location-bottom {
-        display: initial;
-      }
-    }
-    .location {
-      height: 100%;
-      border: 2px solid rgb(198, 198, 145);
+    flex-direction: column;
+    gap: 10px;
+    .location-top {
       padding-right: 12px;
       padding-left: 12px;
       padding-top: 8px;
       padding-bottom: 8px;
-      background-color: rgb(255, 255, 255);
+      height: 100%;
       display: flex;
-      flex-direction: column;
-      gap: 10px;
-      .location-top {
-        padding-right: 12px;
-        padding-left: 12px;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        height: 100%;
+      justify-content: space-between;
+
+      .left {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        justify-content: center;
 
-        .left {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
+        h1 {
+          margin-bottom: 4px;
+          font-size: 18px;
+          line-height: 20px;
+          font-family: "Flame Bold";
+          color: rgb(80, 35, 20);
+        }
 
-          h1 {
-            margin-bottom: 4px;
-            font-size: 18px;
-            line-height: 20px;
-            font-family: "Flame Bold";
-            color: rgb(80, 35, 20);
-          }
-
-          .mid {
-            span {
-              font-size: 13px;
-              font-family: "Flame Sans";
-              line-height: 20px;
-              color: rgb(80, 35, 20);
-            }
-          }
-
-          .functionality {
+        .mid {
+          span {
             font-size: 13px;
             font-family: "Flame Sans";
             line-height: 20px;
@@ -271,73 +388,351 @@
           }
         }
 
-        .right {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100px;
-          button {
-            height: 24px;
-            background-color: transparent;
-            border: none;
-            img {
-              width: 24px;
-              height: 24px;
-              display: none;
-            }
-
-            img.active {
-              transition: 1s;
-              display: initial;
-            }
-          }
+        .functionality {
+          font-size: 13px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
         }
       }
 
-      .location-bottom {
-        display: none;
-        .order-menu {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          gap: 50px;
+      .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+        button {
+          height: 24px;
+          background-color: transparent;
+          border: none;
+          img {
+            width: 24px;
+            height: 24px;
+            display: none;
+          }
 
-          a {
+          img.active {
+            transition: 1s;
+            display: initial;
+          }
+        }
+      }
+    }
+
+    .location-bottom {
+      display: none;
+      .order-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 50px;
+
+        a {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          width: 60px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+          text-decoration: none;
+          font-weight: bold;
+
+          button {
+            border: none;
+            height: 50px;
+            width: 50px;
+            background-color: red;
+            border-radius: 9999px;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 10px;
-            width: 60px;
+
+            img {
+              width: 24px;
+            }
+          }
+          span {
             font-family: "Flame Sans";
             line-height: 20px;
             color: rgb(80, 35, 20);
-            text-decoration: none;
-            font-weight: bold;
-
-            button {
-              border: none;
-              height: 50px;
-              width: 50px;
-              background-color: red;
-              border-radius: 9999px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-
-              img {
-                width: 24px;
-              }
-            }
-            span {
-              font-family: "Flame Sans";
-              line-height: 20px;
-              color: rgb(80, 35, 20);
-            }
           }
         }
       }
     }
   }
 }
+
+.favorites-content {
+  @include container();
+  .location {
+    height: 100%;
+    border: 2px solid rgb(198, 198, 145);
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    .location-top {
+      padding-right: 12px;
+      padding-left: 12px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+
+      .left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        h1 {
+          margin-bottom: 4px;
+          font-size: 18px;
+          line-height: 20px;
+          font-family: "Flame Bold";
+          color: rgb(80, 35, 20);
+        }
+
+        .mid {
+          span {
+            font-size: 13px;
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+
+        .functionality {
+          font-size: 13px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+        }
+      }
+
+      .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+        button {
+          height: 24px;
+          background-color: transparent;
+          border: none;
+          img {
+            width: 24px;
+            height: 24px;
+            display: none;
+          }
+
+          img.active {
+            transition: 1s;
+            display: initial;
+          }
+        }
+      }
+    }
+
+    .location-bottom {
+      display: none;
+      .order-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 50px;
+
+        a {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          width: 60px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+          text-decoration: none;
+          font-weight: bold;
+
+          button {
+            border: none;
+            height: 50px;
+            width: 50px;
+            background-color: red;
+            border-radius: 9999px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+              width: 24px;
+            }
+          }
+          span {
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+      }
+    }
+  }
+}
+
+
+.recents-content {
+  @include container();
+  .location {
+    height: 100%;
+    border: 2px solid rgb(198, 198, 145);
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    .location-top {
+      padding-right: 12px;
+      padding-left: 12px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+
+      .left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        h1 {
+          margin-bottom: 4px;
+          font-size: 18px;
+          line-height: 20px;
+          font-family: "Flame Bold";
+          color: rgb(80, 35, 20);
+        }
+
+        .mid {
+          span {
+            font-size: 13px;
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+
+        .functionality {
+          font-size: 13px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+        }
+      }
+
+      .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+        button {
+          height: 24px;
+          background-color: transparent;
+          border: none;
+          img {
+            width: 24px;
+            height: 24px;
+            display: none;
+          }
+
+          img.active {
+            transition: 1s;
+            display: initial;
+          }
+        }
+      }
+    }
+
+    .location-bottom {
+      display: none;
+      .order-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 50px;
+
+        a {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          width: 60px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+          text-decoration: none;
+          font-weight: bold;
+
+          button {
+            border: none;
+            height: 50px;
+            width: 50px;
+            background-color: red;
+            border-radius: 9999px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+              width: 24px;
+            }
+          }
+          span {
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+      }
+    }
+  }
+}
+
+.location-locations {
+  @include container();
+
+  .locations-menu {
+    display: flex;
+    button {
+      cursor: pointer;
+      font-size: 16px;
+      line-height: 24px;
+      color: rgb(80, 35, 20);
+      width: 100%;
+      height: 48px;
+      background-color: transparent;
+      border: none;
+      font-family: "Flame Sans";
+    }
+    .active {
+      color: red;
+      border-bottom: 3px solid red;
+      font-weight: bold;
+    }
+  }
+}
+
+
