Payment page completed

--- a/Client/SCSS/main.css
+++ b/Client/SCSS/main.css
@@ -1621,6 +1621,380 @@ body {
   color: rgb(80, 35, 20);
 }
 
+.favorites-content,
+.recents-content {
+  display: none;
+}
+
+.nearby-content {
+  width: 1200px;
+  margin: auto;
+}
+@media screen and (max-width: 1200px) {
+  .nearby-content {
+    width: 767px;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .nearby-content {
+    width: 375px;
+    margin: auto;
+  }
+}
+.nearby-content .location {
+  height: 100%;
+  border: 2px solid rgb(198, 198, 145);
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.nearby-content .location .location-top {
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.nearby-content .location .location-top .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.nearby-content .location .location-top .left h1 {
+  margin-bottom: 4px;
+  font-size: 18px;
+  line-height: 20px;
+  font-family: "Flame Bold";
+  color: rgb(80, 35, 20);
+}
+.nearby-content .location .location-top .left .mid span {
+  font-size: 13px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+.nearby-content .location .location-top .left .functionality {
+  font-size: 13px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+.nearby-content .location .location-top .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+.nearby-content .location .location-top .right button {
+  height: 24px;
+  background-color: transparent;
+  border: none;
+}
+.nearby-content .location .location-top .right button img {
+  width: 24px;
+  height: 24px;
+  display: none;
+}
+.nearby-content .location .location-top .right button img.active {
+  transition: 1s;
+  display: initial;
+}
+.nearby-content .location .location-bottom {
+  display: none;
+}
+.nearby-content .location .location-bottom .order-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 50px;
+}
+.nearby-content .location .location-bottom .order-menu a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 60px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+  text-decoration: none;
+  font-weight: bold;
+}
+.nearby-content .location .location-bottom .order-menu a button {
+  border: none;
+  height: 50px;
+  width: 50px;
+  background-color: red;
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nearby-content .location .location-bottom .order-menu a button img {
+  width: 24px;
+}
+.nearby-content .location .location-bottom .order-menu a span {
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+
+.favorites-content {
+  width: 1200px;
+  margin: auto;
+}
+@media screen and (max-width: 1200px) {
+  .favorites-content {
+    width: 767px;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .favorites-content {
+    width: 375px;
+    margin: auto;
+  }
+}
+.favorites-content .location {
+  height: 100%;
+  border: 2px solid rgb(198, 198, 145);
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.favorites-content .location .location-top {
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.favorites-content .location .location-top .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.favorites-content .location .location-top .left h1 {
+  margin-bottom: 4px;
+  font-size: 18px;
+  line-height: 20px;
+  font-family: "Flame Bold";
+  color: rgb(80, 35, 20);
+}
+.favorites-content .location .location-top .left .mid span {
+  font-size: 13px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+.favorites-content .location .location-top .left .functionality {
+  font-size: 13px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+.favorites-content .location .location-top .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+.favorites-content .location .location-top .right button {
+  height: 24px;
+  background-color: transparent;
+  border: none;
+}
+.favorites-content .location .location-top .right button img {
+  width: 24px;
+  height: 24px;
+  display: none;
+}
+.favorites-content .location .location-top .right button img.active {
+  transition: 1s;
+  display: initial;
+}
+.favorites-content .location .location-bottom {
+  display: none;
+}
+.favorites-content .location .location-bottom .order-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 50px;
+}
+.favorites-content .location .location-bottom .order-menu a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 60px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+  text-decoration: none;
+  font-weight: bold;
+}
+.favorites-content .location .location-bottom .order-menu a button {
+  border: none;
+  height: 50px;
+  width: 50px;
+  background-color: red;
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.favorites-content .location .location-bottom .order-menu a button img {
+  width: 24px;
+}
+.favorites-content .location .location-bottom .order-menu a span {
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+
+.recents-content {
+  width: 1200px;
+  margin: auto;
+}
+@media screen and (max-width: 1200px) {
+  .recents-content {
+    width: 767px;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .recents-content {
+    width: 375px;
+    margin: auto;
+  }
+}
+.recents-content .location {
+  height: 100%;
+  border: 2px solid rgb(198, 198, 145);
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.recents-content .location .location-top {
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.recents-content .location .location-top .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.recents-content .location .location-top .left h1 {
+  margin-bottom: 4px;
+  font-size: 18px;
+  line-height: 20px;
+  font-family: "Flame Bold";
+  color: rgb(80, 35, 20);
+}
+.recents-content .location .location-top .left .mid span {
+  font-size: 13px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+.recents-content .location .location-top .left .functionality {
+  font-size: 13px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+.recents-content .location .location-top .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+.recents-content .location .location-top .right button {
+  height: 24px;
+  background-color: transparent;
+  border: none;
+}
+.recents-content .location .location-top .right button img {
+  width: 24px;
+  height: 24px;
+  display: none;
+}
+.recents-content .location .location-top .right button img.active {
+  transition: 1s;
+  display: initial;
+}
+.recents-content .location .location-bottom {
+  display: none;
+}
+.recents-content .location .location-bottom .order-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 50px;
+}
+.recents-content .location .location-bottom .order-menu a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 60px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+  text-decoration: none;
+  font-weight: bold;
+}
+.recents-content .location .location-bottom .order-menu a button {
+  border: none;
+  height: 50px;
+  width: 50px;
+  background-color: red;
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.recents-content .location .location-bottom .order-menu a button img {
+  width: 24px;
+}
+.recents-content .location .location-bottom .order-menu a span {
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+
 .delivery-locations {
   width: 1200px;
   margin: auto;
@@ -1637,14 +2011,10 @@ body {
     margin: auto;
   }
 }
-.delivery-locations .top {
-  margin-top: 5px;
+.delivery-locations .locations-menu {
   display: flex;
 }
-.delivery-locations .top a {
-  width: 100%;
-}
-.delivery-locations .top a button {
+.delivery-locations .locations-menu button {
   cursor: pointer;
   font-size: 16px;
   line-height: 24px;
@@ -1655,119 +2025,10 @@ body {
   border: none;
   font-family: "Flame Sans";
 }
-.delivery-locations .top a .nearby {
+.delivery-locations .locations-menu .active {
   color: red;
   border-bottom: 3px solid red;
   font-weight: bold;
-}
-.delivery-locations .bottom .location.active .location-bottom {
-  display: initial;
-}
-.delivery-locations .bottom .location {
-  height: 100%;
-  border: 2px solid rgb(198, 198, 145);
-  padding-right: 12px;
-  padding-left: 12px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  background-color: rgb(255, 255, 255);
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.delivery-locations .bottom .location .location-top {
-  padding-right: 12px;
-  padding-left: 12px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-.delivery-locations .bottom .location .location-top .left {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.delivery-locations .bottom .location .location-top .left h1 {
-  margin-bottom: 4px;
-  font-size: 18px;
-  line-height: 20px;
-  font-family: "Flame Bold";
-  color: rgb(80, 35, 20);
-}
-.delivery-locations .bottom .location .location-top .left .mid span {
-  font-size: 13px;
-  font-family: "Flame Sans";
-  line-height: 20px;
-  color: rgb(80, 35, 20);
-}
-.delivery-locations .bottom .location .location-top .left .functionality {
-  font-size: 13px;
-  font-family: "Flame Sans";
-  line-height: 20px;
-  color: rgb(80, 35, 20);
-}
-.delivery-locations .bottom .location .location-top .right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100px;
-}
-.delivery-locations .bottom .location .location-top .right button {
-  height: 24px;
-  background-color: transparent;
-  border: none;
-}
-.delivery-locations .bottom .location .location-top .right button img {
-  width: 24px;
-  height: 24px;
-  display: none;
-}
-.delivery-locations .bottom .location .location-top .right button img.active {
-  transition: 1s;
-  display: initial;
-}
-.delivery-locations .bottom .location .location-bottom {
-  display: none;
-}
-.delivery-locations .bottom .location .location-bottom .order-menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  gap: 50px;
-}
-.delivery-locations .bottom .location .location-bottom .order-menu a {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  width: 60px;
-  font-family: "Flame Sans";
-  line-height: 20px;
-  color: rgb(80, 35, 20);
-  text-decoration: none;
-  font-weight: bold;
-}
-.delivery-locations .bottom .location .location-bottom .order-menu a button {
-  border: none;
-  height: 50px;
-  width: 50px;
-  background-color: red;
-  border-radius: 9999px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.delivery-locations .bottom .location .location-bottom .order-menu a button img {
-  width: 24px;
-}
-.delivery-locations .bottom .location .location-bottom .order-menu a span {
-  font-family: "Flame Sans";
-  line-height: 20px;
-  color: rgb(80, 35, 20);
 }
 
 .sign-up {
@@ -3163,4 +3424,135 @@ div.clicked {
   font-weight: bold;
   border-radius: 9999px;
   border: none;
+}
+
+.payment-header {
+  display: flex;
+  align-items: center;
+  background-color: rgb(80, 35, 20);
+  height: 50px;
+  padding: 30px;
+}
+.payment-header .left a img {
+  width: 20px;
+  height: 20px;
+}
+.payment-header .right {
+  width: 100%;
+}
+.payment-header .right h4 {
+  font-size: 24px;
+  font-family: "Flame Bold";
+  color: rgb(245, 235, 220);
+  text-align: center;
+}
+
+form.payment {
+  width: 1200px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+@media screen and (max-width: 1200px) {
+  form.payment {
+    width: 767px;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  form.payment {
+    width: 375px;
+    margin: auto;
+  }
+}
+form.payment h4 {
+  margin-top: 20px;
+  margin-bottom: 12px;
+  font-size: 20px;
+  font-family: "Flame Sans";
+  font-weight: bold;
+  color: rgb(80, 35, 20);
+}
+form.payment div.flexs {
+  display: flex;
+  gap: 5px;
+  height: 100px;
+}
+@media screen and (max-width: 1200px) {
+  form.payment div.flexs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 90px;
+  }
+}
+form.payment div.saveCard {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  margin-left: 8px;
+  font-size: 16px;
+  font-family: "Flame Sans";
+  color: rgb(80, 35, 20);
+}
+form.payment div.saveCard input {
+  transition: height 200ms ease 0s, width 200ms ease 0s;
+  border-radius: 4px;
+  border-color: rgb(80, 35, 20);
+  border-width: 1px;
+  width: 20px;
+  height: 20px;
+}
+form.payment div {
+  width: 60%;
+}
+form.payment div input.submit-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 12px;
+  background-color: rgb(214, 35, 0);
+  font-size: 20px;
+  line-height: 1.5em;
+  font-family: "Flame Sans";
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 40px;
+}
+form.payment div input {
+  display: flex;
+  outline: none;
+  font-family: "Flame Sans";
+  padding-top: 8px;
+  padding-right: 16px;
+  padding-left: 16px;
+  padding-bottom: 8px;
+  border-radius: 4px;
+  border-width: 1px;
+  width: 100%;
+  height: 50px;
+}
+form.payment div label {
+  font-size: 16px;
+  color: rgb(80, 35, 20);
+  font-weight: bold;
+  font-family: "Flame Sans";
+}
+form.payment div.total-price {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid rgb(80, 35, 20);
+}
+form.payment div.total-price span {
+  margin-top: 20px;
+  font-size: 16px;
+  color: rgb(80, 35, 20);
+  font-family: "Flame Sans";
+  font-weight: bold;
 }
