--- a/Client/SCSS/main.scss
+++ b/Client/SCSS/main.scss
@@ -22,5 +22,8 @@
 @import "./Pages/SubMenu";
 @import "./Pages/Detail";
 @import "./Pages/Order-Pickup";
+@import "./Pages/Order-Delivery";
+@import "./Pages/Payment";
+
 
 
