--- a/Client/SCSS/Pages/_Delivery.scss
+++ b/Client/SCSS/Pages/_Delivery.scss
@@ -148,7 +148,6 @@
         width: 100%;
 
         button {
-          
           height: 100%;
           width: 100%;
           font-size: 14px;
@@ -189,84 +188,48 @@
   }
 }
 
-.delivery-locations {
+.favorites-content,
+.recents-content {
+  display: none;
+}
+
+.nearby-content {
   @include container();
-  .top {
-    margin-top: 5px;
+  .location {
+    height: 100%;
+    border: 2px solid rgb(198, 198, 145);
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: rgb(255, 255, 255);
     display: flex;
-    a {
-      width: 100%;
-
-      button {
-        cursor: pointer;
-        font-size: 16px;
-        line-height: 24px;
-        color: rgb(80, 35, 20);
-        width: 100%;
-        height: 48px;
-        background-color: transparent;
-        border: none;
-        font-family: "Flame Sans";
-      }
-      .nearby {
-        color: red;
-        border-bottom: 3px solid red;
-        font-weight: bold;
-      }
-    }
-  }
-
-  .bottom {
-    .location.active {
-      // for js
-
-      .location-bottom {
-        display: initial;
-      }
-    }
-    .location {
-      height: 100%;
-      border: 2px solid rgb(198, 198, 145);
+    flex-direction: column;
+    gap: 10px;
+    .location-top {
       padding-right: 12px;
       padding-left: 12px;
       padding-top: 8px;
       padding-bottom: 8px;
-      background-color: rgb(255, 255, 255);
+      height: 100%;
       display: flex;
-      flex-direction: column;
-      gap: 10px;
-      .location-top {
-        padding-right: 12px;
-        padding-left: 12px;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        height: 100%;
+      justify-content: space-between;
+
+      .left {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        justify-content: center;
 
-        .left {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
+        h1 {
+          margin-bottom: 4px;
+          font-size: 18px;
+          line-height: 20px;
+          font-family: "Flame Bold";
+          color: rgb(80, 35, 20);
+        }
 
-          h1 {
-            margin-bottom: 4px;
-            font-size: 18px;
-            line-height: 20px;
-            font-family: "Flame Bold";
-            color: rgb(80, 35, 20);
-          }
-
-          .mid {
-            span {
-              font-size: 13px;
-              font-family: "Flame Sans";
-              line-height: 20px;
-              color: rgb(80, 35, 20);
-            }
-          }
-
-          .functionality {
+        .mid {
+          span {
             font-size: 13px;
             font-family: "Flame Sans";
             line-height: 20px;
@@ -274,73 +237,348 @@
           }
         }
 
-        .right {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100px;
-          button {
-            height: 24px;
-            background-color: transparent;
-            border: none;
-            img {
-              width: 24px;
-              height: 24px;
-              display: none;
-            }
-
-            img.active {
-              transition: 1s;
-              display: initial;
-            }
-          }
+        .functionality {
+          font-size: 13px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
         }
       }
 
-      .location-bottom {
-        display: none;
-        .order-menu {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          gap: 50px;
+      .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+        button {
+          height: 24px;
+          background-color: transparent;
+          border: none;
+          img {
+            width: 24px;
+            height: 24px;
+            display: none;
+          }
 
-          a {
+          img.active {
+            transition: 1s;
+            display: initial;
+          }
+        }
+      }
+    }
+
+    .location-bottom {
+      display: none;
+      .order-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 50px;
+
+        a {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          width: 60px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+          text-decoration: none;
+          font-weight: bold;
+
+          button {
+            border: none;
+            height: 50px;
+            width: 50px;
+            background-color: red;
+            border-radius: 9999px;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 10px;
-            width: 60px;
+
+            img {
+              width: 24px;
+            }
+          }
+          span {
             font-family: "Flame Sans";
             line-height: 20px;
             color: rgb(80, 35, 20);
-            text-decoration: none;
-            font-weight: bold;
-
-            button {
-              border: none;
-              height: 50px;
-              width: 50px;
-              background-color: red;
-              border-radius: 9999px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-
-              img {
-                width: 24px;
-              }
-            }
-            span {
-              font-family: "Flame Sans";
-              line-height: 20px;
-              color: rgb(80, 35, 20);
-            }
           }
         }
       }
+    }
+  }
+}
+
+.favorites-content {
+  @include container();
+  .location {
+    height: 100%;
+    border: 2px solid rgb(198, 198, 145);
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    .location-top {
+      padding-right: 12px;
+      padding-left: 12px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+
+      .left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        h1 {
+          margin-bottom: 4px;
+          font-size: 18px;
+          line-height: 20px;
+          font-family: "Flame Bold";
+          color: rgb(80, 35, 20);
+        }
+
+        .mid {
+          span {
+            font-size: 13px;
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+
+        .functionality {
+          font-size: 13px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+        }
+      }
+
+      .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+        button {
+          height: 24px;
+          background-color: transparent;
+          border: none;
+          img {
+            width: 24px;
+            height: 24px;
+            display: none;
+          }
+
+          img.active {
+            transition: 1s;
+            display: initial;
+          }
+        }
+      }
+    }
+
+    .location-bottom {
+      display: none;
+      .order-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 50px;
+
+        a {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          width: 60px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+          text-decoration: none;
+          font-weight: bold;
+
+          button {
+            border: none;
+            height: 50px;
+            width: 50px;
+            background-color: red;
+            border-radius: 9999px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+              width: 24px;
+            }
+          }
+          span {
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+      }
+    }
+  }
+}
+
+.recents-content {
+  @include container();
+  .location {
+    height: 100%;
+    border: 2px solid rgb(198, 198, 145);
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    .location-top {
+      padding-right: 12px;
+      padding-left: 12px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+
+      .left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        h1 {
+          margin-bottom: 4px;
+          font-size: 18px;
+          line-height: 20px;
+          font-family: "Flame Bold";
+          color: rgb(80, 35, 20);
+        }
+
+        .mid {
+          span {
+            font-size: 13px;
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+
+        .functionality {
+          font-size: 13px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+        }
+      }
+
+      .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+        button {
+          height: 24px;
+          background-color: transparent;
+          border: none;
+          img {
+            width: 24px;
+            height: 24px;
+            display: none;
+          }
+
+          img.active {
+            transition: 1s;
+            display: initial;
+          }
+        }
+      }
+    }
+
+    .location-bottom {
+      display: none;
+      .order-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 50px;
+
+        a {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          width: 60px;
+          font-family: "Flame Sans";
+          line-height: 20px;
+          color: rgb(80, 35, 20);
+          text-decoration: none;
+          font-weight: bold;
+
+          button {
+            border: none;
+            height: 50px;
+            width: 50px;
+            background-color: red;
+            border-radius: 9999px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+              width: 24px;
+            }
+          }
+          span {
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+      }
+    }
+  }
+}
+
+.delivery-locations {
+  @include container();
+
+  .locations-menu {
+    display: flex;
+    button {
+      cursor: pointer;
+      font-size: 16px;
+      line-height: 24px;
+      color: rgb(80, 35, 20);
+      width: 100%;
+      height: 48px;
+      background-color: transparent;
+      border: none;
+      font-family: "Flame Sans";
+    }
+    .active {
+      color: red;
+      border-bottom: 3px solid red;
+      font-weight: bold;
     }
   }
 }
